--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "pixelhue-fseries",
-  "version": "1.0.1",
+  "name": "pixelhue-fseries-switcher",
+  "version": "1.0.0",
   "main": "./src/main.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier -w ."
   },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bitfocus/companion-module-pixelhue-fseries-switcher.git"
+  },
   "dependencies": {
-    "@companion-module/base": "~1.0",
-    "@companion-module/tools": "^1.2.0",
+    "@companion-module/base": "~1.11.3",
     "ping": "^0.4.4"
+  },
+  "devDependencies": {
+    "@companion-module/tools": "^1.4.1"
   },
   "prettier": "@companion-module/tools/.prettierrc.json"
 }
+
